# kernel-utils

./: CLAUDE.md  Dockerfile  README.md  fish_greeting.fish  initramfs-builder.sh  kdev  pyproject.toml  run.sh
kernel_utils/: Dockerfile  cli.py  debugging_stuff  disable_random_defconfig_stuff  fish_greeting.fish  help_msg.fish  initramfs-builder.sh  krun.sh  run.sh
